deploy/base/23-contmgr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contmgr
  namespace: rootenv-infra
  labels:
    app: contmgr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contmgr
  template:
    metadata:
      labels:
        app: contmgr
    spec:
      serviceAccountName: contmgr
      containers:
        - name: contmgr
          image: rootenv-contmgr
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          ports:
            - containerPort: 8081
              name: health
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
