deploy/base/25-labenv-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: labenv-operator-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labenv-operator-controller-manager
  namespace: labenv-operator-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labenv-operator
  template:
    metadata:
      labels:
        app: labenv-operator
    spec:
      serviceAccountName: labenv-operator-controller-manager
      containers:
      - name: manager
        image: labenv-operator
        imagePullPolicy: IfNotPresent
        args:
        - --health-probe-bind-address=:8081
        - --metrics-bind-address=0
        ports:
        - containerPort: 8081
          name: health
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 128Mi
