deploy/base/53-attempt-controller.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: attempt-controller
  name: attempt-controller
  namespace: rootenv-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: attempt-controller
  strategy: {}
  template:
    metadata:
      labels:
        app: attempt-controller
    spec:
      serviceAccountName: attempt-controller
      containers:
      - name: attempt-controller
        image: attempt-controller
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
status: {}
