deploy/base/23-ingress-authenticator-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ingress-authenticator
  name: ingress-authenticator
  namespace: rootenv-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-authenticator
  strategy: {}
  template:
    metadata:
      labels:
        app: ingress-authenticator
    spec:
      containers:
      - name: ingress-authenticator
        image: ingress-authenticator:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ingress-authenticator
  name: ingress-authenticator-svc
  namespace: rootenv-infra
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: ingress-authenticator
  type: ClusterIP
status:
  loadBalancer: {}
