deploy/base/32-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-svc
  name: frontend-svc
  namespace: rootenv-infra
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
  type: ClusterIP
status:
  loadBalancer: {}
