deploy/base/40-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: rootenv-infra
  annotations:
    spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - {}
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 8090
      - path: /_
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 8090
status:
  loadBalancer: {}
